# vax

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGES.md  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs
.cargo/: config
.github/workflows/: ci.yml
assets/webpage01/: COVID Vaccine Clinic - Spicewood Springs H-E-B (#31) _ H-E-B Event Signup.htm
assets/webpage01/COVID Vaccine Clinic - Spicewood Springs H-E-B (#31) _ H-E-B Event Signup_files/: anchor.html  app.css  app.js  appcore.js  aura_prod.js  bootstrap.js  dCustom0.css  dCustom1.css  dCustom2.css  enterprise.js  inline.js  js  resources.js
src/: appointment.rs  browser.rs  geo.rs  heb.rs  lib.rs  person.rs  shot.rs  texts.rs
src/cli/: mod.rs  options.rs  utils.rs
