[package]
name = "vax"
version = "0.5.0-dev"
authors = ["Brian Bruggeman <1350114+brianbruggeman@users.noreply.github.com>"]
edition = "2018"
description = "A vaccination sign-up tool for Covid-19"
license = "MIT"

[package.metadata.bundle]
identifier = "io.github.brianbruggeman.vax"

[dependencies]
ansi_term = "0.12.1"
dialoguer = "0.8.0"
dirs = "3.0.1"
dotenv = "0.15.0"
env_logger = "0.8.3"
fantoccini = "0.17.3"
futures = "0.3.13"
geo = "0.17.1"
geocoding = "0.3.1"
geoutils = "0.4.0"
log = "0.4.14"
rand = "0.8.3"
reqwest = "0.11.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
sysinfo = "0.16.5"
tokio = { version = "1.3.0", features = ["full"] }
webbrowser = "0.5.5"
webdriver = "0.43.0"

# Spinner/s just doesn't work on Windows at this time.
[target.'cfg(not(windows))'.dependencies]
spinners = "1.2.0"

[build-dependencies]
cfg_aliases = "0.1.1"
